Cleanup variable declaration

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Shuffle Pass — Memorable Random Password Generator</title>
 	<link rel="stylesheet" href="assets/style.css">
-	<link rel="icon" href="favicon.png" type="image/png" />
+	<link rel="icon" href="favicon.png" type="image/png">
 	<script src="assets/includes/shuffle.js"></script>
   </head>
   <body>
