--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	  </div>
 	  <div class="footer">
 		  Made with 🤍 by <a href="https://jm-d.net">Jasper Miller-Davis</a>
+		  <div><a href="https://github.com/jaspermillerdavis/shufflepass" class="github"></a></div>
 	  </div>
 	  </div>
 	  <script>
