--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	  	<div id="regen">Regenerate!</div>
 	  </div>
 	  <div class="footer">
-		  Made with 🤍 by <a href="https://jm-d.net">Jasper Miller-Davis</a>
-		  <div><a href="https://github.com/jaspermillerdavis/shufflepass" class="github"></a></div>
+		  Made with 🤍 by <a href="https://jm-d.net">Jazz Miller-Davis</a>
+		  <div><a href="https://github.com/jazzmillerdavis/shufflepass" class="github"></a></div>
 	  </div>
 	  </div>
 	  <script>
